--- a/docs/validator/increase-stake.mdx
+++ b/docs/validator/increase-stake.mdx
@@ -7,7 +7,7 @@ import confirmTransaction from './confirm-transaction.png';
 After becoming a validator, you can increase your self-staked amount of RON.
 
 To increase your stake, follow these steps:
-1. Go to **My Staking > Stake more**.
+1. On the **My Staking** page, click **Stake more**.
 
 <img src={increaseStakeStepOne} width={480} />
 
