--- a/docs/validator/withdraw-stake.mdx
+++ b/docs/validator/withdraw-stake.mdx
@@ -3,18 +3,17 @@ import withdrawStakeStepTwo from './withdraw-stake-step-2.png';
 import confirmTransaction from './confirm-transaction.png';
 
 # Withdraw your stake
-You can withdraw part of your stake back to your wallet as long as it’s been three days since you last staked in. The remaining balance after withdrawal has to be at least 500,000 RON (subject to change on mainnet).
+You can withdraw part of your stake to your wallet as long as it’s been three days since you last staked in and provided that the minimum staking amount is maintained after withdrawal.
 
 :::caution
 Withdrawing a stake might lower your chance of being selected as a validator in the upcoming days, depending on how much others have staked.
 :::
 
-To withdraw your stake, follow these steps:
-1. Go to **My Staking > Withdraw**.
+1. On the **My Staking** page, expand the options, and then click **Withdraw**.
 
 <img src={withdrawStakeStepOne} width={480} />
 
-2. Enter the amount manually or click **Max** to automatically fill in the maximum available amount.
+2. Enter the amount manually or click **Max** to automatically fill in the maximum withdrawable amount.
 3. Click **Withdraw**.
 
 <img src={withdrawStakeStepTwo} width={416} />
