--- a/docs/validator/commission-rate.mdx
+++ b/docs/validator/commission-rate.mdx
@@ -1,6 +1,6 @@
-import changeCommissionRate from './change-commission-rate.png';
-import profileCommissionRate from './profile-commission-rate.png';
-import announceCommissionRate from './announce-commission-rate.png';
+import changeCommissionStepOne from './change-commission-step-1.png';
+import changeCommissionStepTwo from './change-commission-step-2.png';
+import changeCommissionStepThree from './change-commission-step-3.png';
 
 # Change commission rate
 When registering to become a validator, you were asked to set a commission rate—the percentage of block rewards you receive before distributing the rest to your delegators.
@@ -10,12 +10,12 @@ You can change the commission rate as many times as you like.
 To change the commission rate, follow these steps:
 1. Go to **My Profile > Commission rate**.
 
-<img src={profileCommissionRate} width={280} />
+<img src={changeCommissionStepOne} width={280} />
 
 2. Enter the new commission rate and set the date when it takes effect. The date must be set at least seven days from the current date.
 
-<img src={changeCommissionRate} width={416} />
+<img src={changeCommissionStepTwo} width={416} />
 
 After you save the new rate, a clock icon is displayed next to your current rate to inform the community of the upcoming change.
 
-<img src={announceCommissionRate} width={280} />
+<img src={changeCommissionStepThree} width={324} />
