--- a/docs/validator/maintenance-mode.mdx
+++ b/docs/validator/maintenance-mode.mdx
@@ -1,22 +1,32 @@
-import scheduleMaintenanceMode from './schedule-maintenance.png';
-import ongoingMaintenanceMode from './ongoing-maintenance.png';
-import upcomingMaintenanceMode from './upcoming-maintenance.png';
+import maintenanceStepOne from './schedule-maintenance-step-1.png';
+import maintenanceStepTwo from './schedule-maintenance-step-2.png';
+import ongoingMaintenance from './maintenance-ongoing.png';
+import upcomingMaintenance from './maintenance-upcoming.png';
 
 # Schedule maintenance mode
-When running a node, you might need to put it in maintenance mode at a scheduled time. This feature is available only to standard validators and governing validators.
+When running a node, you might need to put it in maintenance mode at a scheduled time.
 
 :::note
 
-There can be up to three validators scheduling maintenance mode at a time. If you’re unable to schedule yours, check with the other validators when their maintenance mode ends.
+This feature is only available to Standard Validators and Governing Validators.
 
 :::
 
-To schedule maintenance, follow these steps:
-1. Go to **My Profile > Maintenance mode** and specify the duration of the maintenance period in epochs. The valid duration is 1-144 epochs (~10 minutes to ~24 hours), where 1 epoch equals 200 blocks. You can choose from the valid start epoch, then decide on the end epoch.
+1. Go to **My Profile > Maintenance mode**.
 
-<img src={scheduleMaintenanceMode} width={416} />
+<img src={maintenanceStepOne} width={280} />
 
-2. After you submit the request, the system displays your maintenance time, status, and estimated time until the maintenance period starts or ends.
+2. Specify the duration of the maintenance period in epochs. The valid duration is 1-144 epochs (~10 minutes to ~24 hours), where 1 epoch equals 200 blocks. You can choose from the valid start epoch, then decide on the end epoch.
 
-<img src={upcomingMaintenanceMode} width={280} />
-<img src={ongoingMaintenanceMode} width={280} />
+<img src={maintenanceStepTwo} width={416} />
+
+3. After you submit the request, the system displays your maintenance time, status, and estimated time until the maintenance period starts or ends.
+
+<img src={upcomingMaintenance} width={280} />
+<img src={ongoingMaintenance} width={280} />
+
+:::caution
+
+There can be up to three validators scheduling maintenance mode at a time. If you’re unable to schedule, check with the other validators when their maintenance mode ends.
+
+:::
