--- a/docs/validator/slashing.mdx
+++ b/docs/validator/slashing.mdx
@@ -69,7 +69,7 @@ The validator missed more than 20% votes. Their status will be set to **In jail*
 
 ### Relaying slash
 
-The case when a governing validator doesn’t sync the set of bridge operators to the Ethereum chain for three consecutive days. Their status will be set to **Punished**. They will be slashed 10,000 RON and won’t receive commission during this time.
+The case when a Governing Validator doesn’t sync the set of bridge operators to the Ethereum chain for three consecutive days. Their status will be set to **Punished**. They will be slashed 10,000 RON and won’t receive commission during this time.
 
 <img src={relayingSlash} width={1224} />
 
@@ -77,4 +77,4 @@ The case when a governing validator doesn’t sync the set of bridge operators t
 
 ### Multiple slashes
 
-Validators might experience multiple concurrent slashes if they have issues with both their validator node, bridge operator node, and the relaying responsibilities of the governing validator.
+Validators might experience multiple concurrent slashes if they have issues with both their validator node, bridge operator node, and the relaying responsibilities of the Governing Validator.
