fix: Replaced screenshot and fixed number of blocks for jailing

--- a/docs/validator/maintenance-mode.mdx
+++ b/docs/validator/maintenance-mode.mdx
@@ -12,6 +12,7 @@ This feature is only available to Standard Validators and Governing Validators.
 
 :::
 
+To schedule maintenance mode, follow these steps:
 1. Go to **My Profile > Maintenance mode**.
 
 <img src={maintenanceStepOne} width={280} />
