--- a/docs/validator/view-profile.mdx
+++ b/docs/validator/view-profile.mdx
@@ -1,4 +1,4 @@
-import viewProfile from './profile.png';
+import viewProfile from './change-commission-step-1.png';
 import governingAddresses from './governing-addresses.png';
 
 # View your profile
