--- a/docs/validator/withdraw-stake.mdx
+++ b/docs/validator/withdraw-stake.mdx
@@ -9,6 +9,7 @@ You can withdraw part of your stake to your wallet as long as it’s been three 
 Withdrawing a stake might lower your chance of being selected as a validator in the upcoming days, depending on how much others have staked.
 :::
 
+To withdraw your stake, follow these steps:
 1. On the **My Staking** page, expand the options, and then click **Withdraw**.
 
 <img src={withdrawStakeStepOne} width={480} />
