fix: replace warning with caution on the renounce page

--- a/docs/validator/renounce.mdx
+++ b/docs/validator/renounce.mdx
@@ -17,6 +17,6 @@ To renounce your role, follow these steps:
 
 After submission, you will need to wait for seven days for renunciation to take effect. All the commission, bridge rewards, staking rewards and the remaining self-stake will be transferred to you automatically on the date of renunciation.
 
-:::warning
+:::caution
 Because your role remains active during the seven-day waiting period, you're advised to keep your node online and up to date with the network to avoid slashing.
 :::
