fix: remove coming soon banner and update part of delegator screenshots

--- a/docs/validator/view-profile.mdx
+++ b/docs/validator/view-profile.mdx
@@ -3,13 +3,7 @@ import governingAddresses from './governing-addresses.png';
 
 # View your profile
 
-:::note
-
-This feature will be released soon.
-
-:::
-
-You can see the list of addresses linking to your validator account by going to your connected wallet and clicking **My profile**.
+You can view the list of addresses linking to your validator account by going to your connected wallet and clicking **My profile**.
 
 <img src={viewProfile} width={280} />
 
