fix: second attemtpt to fix broken links

--- a/docs/validators/validator/onboarding/become-validator.mdx
+++ b/docs/validators/validator/onboarding/become-validator.mdx
@@ -26,13 +26,13 @@ To become a validator, follow these steps:
 1. Go to the [staking dashboard](https://saigon-staking.roninchain.com/) and click **Become a validator**. 
 <img src={becomeValidator} width={1280} />
 
-2. Familiarize yourself with the requirements and slashing penalties applied to validators. It's also highly recommended that you read the [white paper](./basics/ronin/platform/white-paper).
+2. Familiarize yourself with the requirements and slashing penalties applied to validators. It's also highly recommended that you read the [white paper](./../../../basics/ronin/platform/white-paper.md).
 <img src={stepOne} width={1280} />
 
-3. Set up your validator and bridge operator nodes following the [guide](./validators/technician/setup).
+3. Set up your validator and bridge operator nodes following the [guide](./../../technician/setup.md).
 <img src={stepTwo} width={1280} />
 
-4. Fill in your [addresses](view-profile) and specify your commission rate.
+4. Fill in your [addresses](./../manage-profile/profile.mdx) and specify your commission rate.
 <img src={stepThree} width={1280} />
 
 5. Provide the initial stake of RON.
