--- a/docs/validators/slashing/bailout.mdx
+++ b/docs/validators/slashing/bailout.mdx
@@ -16,7 +16,7 @@ This feature might not be available on testnet until mainnet launch.
 
 ## Overview
 
-If you're in [tier 2 validator slashing](slashing#unavailability-validator), you can _bail out_ of jail at any time using your credit score.
+If you're in [tier 2 validator slashing](./slashing.mdx), you can _bail out_ of jail at any time using your credit score.
 
 The credit score is calculated as follows:
 * All validators start with a 0 credit score.
