feat: address feedback, update half of the white paper

--- a/docs/validators/onboarding/become-validator.mdx
+++ b/docs/validators/onboarding/become-validator.mdx
@@ -25,10 +25,10 @@ There are three validator roles:
 1. Go to the [staking dashboard](https://saigon-staking.roninchain.com/) and click **Become a validator**. 
 <img src={becomeValidator} width={1280} />
 
-1. Familiarize yourself with the requirements and slashing penalties applied to validators. It's also highly recommended that you read the [white paper](./../../basics/platform/white-paper.md).
+1. Familiarize yourself with the requirements and slashing penalties applied to validators. It's also highly recommended that you read the [white paper](./../../basics/white-paper.md).
 <img src={stepOne} width={1280} />
 
-1. Set up your validator and bridge operator nodes following [Run a validator node](./../../node-operators/validator-setup.md) and [Run a bridge operator node](./../../node-operators/bridge-setup.md), respectively.
+1. Set up your validator and bridge operator nodes following [Run a validator node](./../../node-operators/validator-setup-t.md) and [Run a bridge operator node](./../../node-operators/bridge-setup-t.md), respectively.
 <img src={stepTwo} width={1280} />
 
 1. Fill in your [addresses](./../manage-profile/profile.mdx) and specify your commission rate.
