--- a/docs/validator/maintenance-mode.mdx
+++ b/docs/validator/maintenance-mode.mdx
@@ -4,15 +4,8 @@ import ongoingMaintenance from './maintenance-ongoing.png';
 import upcomingMaintenance from './maintenance-upcoming.png';
 
 # Schedule maintenance mode
-When running a node, you might need to put it in maintenance mode at a scheduled time.
+As a Standard Validator or Governing Validator, you can schedule maintenance for a node.
 
-:::note
-
-This feature is only available to Standard Validators and Governing Validators.
-
-:::
-
-To schedule maintenance mode, follow these steps:
 1. Go to **My Profile > Maintenance mode**.
 
 <img src={maintenanceStepOne} width={280} />
