fix: change min maintenance rate from 1 to 3 epochs

--- a/docs/validator/maintenance-mode.mdx
+++ b/docs/validator/maintenance-mode.mdx
@@ -10,7 +10,8 @@ As a Standard Validator or Governing Validator, you can schedule maintenance for
 
 <img src={maintenanceStepOne} width={280} />
 
-2. Specify the duration of the maintenance period in epochs. The valid duration is 1-144 epochs (~10 minutes to ~24 hours), where 1 epoch equals 200 blocks. You can choose from the valid start epoch, then decide on the end epoch.
+2. Specify the duration of the maintenance period in epochs. 
+The valid duration is 3-144 epochs (~30 minutes to ~24 hours), where 1 epoch equals 200 blocks. You can choose from the valid start epoch, then decide on the end epoch.
 
 <img src={maintenanceStepTwo} width={416} />
 
