fix: remove mention of inactive Bail out button

--- a/docs/validator/bailout.mdx
+++ b/docs/validator/bailout.mdx
@@ -30,8 +30,7 @@ It takes 5 credits to bail out for each epoch.
 
 1. Go to the [staking dashboard](https://saigon-staking.roninchain.com/)
 and select **My Staking**.
-2. Locate the warning banner and click **Bail out**. If the button is
-inactive, it means that your current credit score is less than 5.
+2. Locate the warning banner and click **Bail out**.
 
 <img src={stepOne} width={1224} />
 
