--- a/docs/validators/slashing/bailout.mdx
+++ b/docs/validators/slashing/bailout.mdx
@@ -1,31 +1,26 @@
----
-description: Bail out of jail if you got slashed
----
-
 import creditScore from './assets/credit-score.png';
 import stepOne from './assets/val-slash-tier-2.png';
 import stepTwo from './assets/confirm-bailout.png';
 
 # Bailout
 
-:::info
-
-This feature might not be available on testnet until mainnet launch.
-
-:::
-
 ## Overview
 
-If you're in [tier 2 validator slashing](./slashing.mdx), you can _bail out_ of jail at any time using your credit score.
+If you're in [tier 2 validator slashing](slashing#tier-2), you can bail out
+of jail at any time using your credit score.
 
 The credit score is calculated as follows:
 * All validators start with a 0 credit score.
-* Every day, each validator (who is not in jail) is given 50 credits if they miss no block. The validator loses 1 credit for every missed block. 
+* Every day, each validator (who is not in jail) is given 50 credits
+if they miss no block. The validator loses 1 credit for every missed block.
 * The maximum number of credits for a validator is 1,800.
 
 ## Check your credit score
 
-Go to the **My Staking** page and find your current credit score under **CREDIT SCORE**, next to your total self-stake amount.
+1. Go to the [staking dashboard](https://saigon-staking.roninchain.com/)
+and select **My Staking**. 
+2. Find your credit score under **CREDIT SCORE**, next to your total
+self-stake amount.
 
 <img src={creditScore} width={1280} />
 
@@ -33,12 +28,16 @@ Go to the **My Staking** page and find your current credit score under **CREDIT 
 
 It takes 5 credits to bail out for each epoch.
 
-1. On **My Staking**, find the warning banner, and then click **Bail out**. If the button is inactive, it means that your current credit score is less than 5.
+1. Go to the [staking dashboard](https://saigon-staking.roninchain.com/)
+and select **My Staking**.
+2. Locate the warning banner and click **Bail out**.
 
 <img src={stepOne} width={1224} />
 
-2. Review the conditions and click **Confirm**.
+3. Review the terms of bailout and click **Submit**.
 
-<img src={stepTwo} width={416} />
+<img src={stepTwo} width={361} />
 
-If you bail out on the same day you got slashed, you still receive 50% of the block reward (commission and staking) from the time you bailed out until the end of the day.
+If you bail out on the same day you got slashed, you still receive 50%
+of the block reward (commission and staking) from the time you bailed
+out until the end of the day.
