feat: publish delegator FAQ, update maintenance guide, update gas price

--- a/docs/validator/maintenance-mode.mdx
+++ b/docs/validator/maintenance-mode.mdx
@@ -6,6 +6,12 @@ import upcomingMaintenance from './maintenance-upcoming.png';
 # Schedule maintenance mode
 As a Standard Validator or Governing Validator, you can schedule maintenance for a node.
 
+:::note
+
+There can be up to three validators scheduling maintenance mode at a time. If you’re unable to schedule, check with the other validators when their maintenance mode ends.
+
+:::
+
 1. Go to **My Profile > Maintenance mode**.
 
 <img src={maintenanceStepOne} width={280} />
@@ -19,9 +25,3 @@ The valid duration is 3-144 epochs (~30 minutes to ~24 hours), where 1 epoch equ
 
 <img src={upcomingMaintenance} width={280} />
 <img src={ongoingMaintenance} width={280} />
-
-:::caution
-
-There can be up to three validators scheduling maintenance mode at a time. If you’re unable to schedule, check with the other validators when their maintenance mode ends.
-
-:::
