hide FAQ, update validator guides, add note on RON balance

--- a/docs/validator/bailout.mdx
+++ b/docs/validator/bailout.mdx
@@ -6,7 +6,7 @@ import stepTwo from './confirm-bailout.png';
 
 ## Overview
 
-If you're in [tier 2 validator slashing](slashing#tier-2), you can bail out
+If you're in [tier 2 validator slashing](slashing#tier-2-validator-slashing), you can bail out
 of jail at any time using your credit score.
 
 The credit score is calculated as follows:
