--- a/docs/validator/increase-stake.mdx
+++ b/docs/validator/increase-stake.mdx
@@ -6,15 +6,16 @@ import confirmTransaction from './confirm-transaction.png';
 
 After becoming a validator, you can increase your self-staked amount of RON.
 
-1. On the **My Staking** page, click **Stake more**.
+1. Go to the [staking dashboard](https://saigon-staking.roninchain.com/) and select **My Staking**.
+2. Click **Stake more**.
 
 <img src={increaseStakeStepOne} width={480} />
 
-2. Enter the amount and click **Stake**. The estimated reward is calculated based on your estimated APR (annual percentage rate), so you can see how much RON will return from this stake.
+3. Enter the amount and click **Stake**. The estimated reward is calculated based on your estimated APR (annual percentage rate), so you can see how much RON will return from this stake.
 
 <img src={increaseStakeStepTwo} width={416} />
 
-3. Confirm the transaction.
+4. Confirm the transaction.
 
 <img src={confirmTransaction} width={375} />
 
