--- a/docs/validator/withdraw-stake.mdx
+++ b/docs/validator/withdraw-stake.mdx
@@ -9,16 +9,17 @@ You can withdraw part of your stake to your wallet as long as it’s been three 
 Withdrawing a stake might lower your chance of being selected as a validator in the upcoming days, depending on how much others have staked.
 :::
 
-1. On the **My Staking** page, expand the options, and then click **Withdraw**.
+1. Go to the [staking dashboard](https://saigon-staking.roninchain.com/) and select **My Staking**.
+2. Expand the options and click **Withdraw**.
 
 <img src={withdrawStakeStepOne} width={480} />
 
-2. Enter the amount manually or click **Max** to automatically fill in the maximum withdrawable amount.
-3. Click **Withdraw**.
+3. Enter the amount manually or click **Max** to automatically fill in the maximum withdrawable amount.
+4. Click **Withdraw**.
 
 <img src={withdrawStakeStepTwo} width={416} />
 
-4. Confirm the transaction.
+5. Confirm the transaction.
 
 <img src={confirmTransaction} width={375} />
 
