hide View analytics page

--- a/docs/validator/renounce.mdx
+++ b/docs/validator/renounce.mdx
@@ -4,7 +4,8 @@ import renounceStepTwo from './renounce-step-2.png';
 # Renounce your role
 You can request renunciation of your role as a validator. If you're a Standard Validator or Validator Candidate, follow this guide. If you’re a Governing Validator, contact the Sky Mavis team for renunciation.
 
-1. Go to **My Staking**, expand the options, and select **Renounce**.
+1. Go to the [staking dashboard](https://saigon-staking.roninchain.com/) and select **My Staking**.
+2. Expand the options and click **Renounce**.
 
 <img src={renounceStepOne} width={480} />
 
