--- a/docs/validator/view-analytics.mdx
+++ b/docs/validator/view-analytics.mdx
@@ -8,6 +8,8 @@ This feature will be released soon.
 
 :::
 
-You can view analytics about the rewards you earned and blocks you produced over different periods of time, by going to **My Staking > Analytics**.
+You can view analytics about the rewards you earned and blocks you
+produced over different periods of time, by going to
+the [staking dashboard](https://saigon-staking.roninchain.com/) **> My Staking > Analytics**.
 
 <img src={rewardAnalytics} width={1280} />
