--- a/docs/validator/withdraw-stake.mdx
+++ b/docs/validator/withdraw-stake.mdx
@@ -6,7 +6,7 @@ import confirmTransaction from './confirm-transaction.png';
 You can withdraw part of your stake to your wallet as long as it’s been three days since you last staked in and provided that the minimum staking amount is maintained after withdrawal.
 
 :::caution
-Withdrawing a stake might lower your chance of being selected as a validator in the upcoming days, depending on how much others have staked.
+Withdrawing the stake might lower your chance of being selected as a validator in the upcoming days, depending on how much others have staked.
 :::
 
 1. Go to the [staking dashboard](https://saigon-staking.roninchain.com/) and select **My Staking**.
