--- a/docs/validator/view-activities.mdx
+++ b/docs/validator/view-activities.mdx
@@ -2,6 +2,8 @@ import activities from './activities.png';
 
 # View your activities
 
-You can view all your staking activities, reward claims, and reward distributions, by going to **My Staking > Activities**.
+You can view all your staking activities,
+reward claims, and reward distributions,
+by going to the [staking dashboard](https://saigon-staking.roninchain.com/) **> My Staking > Activities**.
 
 <img src={activities} width={1280} />
