--- a/docs/validator/view-profile.mdx
+++ b/docs/validator/view-profile.mdx
@@ -3,7 +3,7 @@ import governingAddresses from './governing-addresses.png';
 
 # View your profile
 
-You can view the list of addresses linking to your validator account by going to your connected wallet and clicking **My profile**.
+You can view the list of addresses linked to your validator account by going to your connected wallet and clicking **My profile**.
 
 <img src={viewProfile} width={280} />
 
