feat: add delegator faq (#64)
* feat: update delegator guides (#54)

feat: update the delegator guides (become a delegator, move and withdraw stake, claim rewards)
feat: create an auto-generated category page for the Staking section
chore: delete unpublished markdown files and screenshots from the stake directory in the repo

* Feat/delegator faq (#58)

* feat: update delegator guides (#54)

feat: update the delegator guides (become a delegator, move and withdraw stake, claim rewards)
feat: create an auto-generated category page for the Staking section
chore: delete unpublished markdown files and screenshots from the stake directory in the repo

* feat: add faq page with delegator questions, rename directory in repo to match page name

* feat: add more questions to the delegator faq

* fix: broken link

* fix: merge conflicts

* fix: remove git artifacts, remove 'follow these steps' (#59)

* Feat/bailout doc (#60)

* feat: update bailout doc and restructure page tree

* fix: merge conflicts

* fix: change min maintenance rate from 1 to 3 epochs (#61)

* fix: remove mention of inactive Bail out button (#62)

* feat: publish delegator FAQ, update maintenance guide, update gas price

* fix: merge conflicts

* fix: merge conflicts

* chore: change title of delegator FAQ pages to reflect role

* hide FAQ, update validator guides, add note on RON balance

* add range for commission rate

* fix incorrectly named screenshot

* hide View analytics page

* update bailout screenshot and change admonition in Become a validator

--- a/docs/validator/maintenance-mode.mdx
+++ b/docs/validator/maintenance-mode.mdx
@@ -4,20 +4,20 @@ import ongoingMaintenance from './maintenance-ongoing.png';
 import upcomingMaintenance from './maintenance-upcoming.png';
 
 # Schedule maintenance mode
-When running a node, you might need to put it in maintenance mode at a scheduled time.
+As a Standard Validator or Governing Validator, you can schedule maintenance for a node.
 
 :::note
 
-This feature is only available to Standard Validators and Governing Validators.
+There can be up to three validators scheduling maintenance mode at a time. If you’re unable to schedule, check with the other validators when their maintenance mode ends.
 
 :::
 
-To schedule maintenance mode, follow these steps:
 1. Go to **My Profile > Maintenance mode**.
 
 <img src={maintenanceStepOne} width={280} />
 
-2. Specify the duration of the maintenance period in epochs. The valid duration is 1-144 epochs (~10 minutes to ~24 hours), where 1 epoch equals 200 blocks. You can choose from the valid start epoch, then decide on the end epoch.
+2. Specify the duration of the maintenance period in epochs. 
+The valid duration is 3-144 epochs (~30 minutes to ~24 hours), where 1 epoch equals 200 blocks. You can choose from the valid start epoch, then decide on the end epoch.
 
 <img src={maintenanceStepTwo} width={416} />
 
@@ -25,9 +25,3 @@ To schedule maintenance mode, follow these steps:
 
 <img src={upcomingMaintenance} width={280} />
 <img src={ongoingMaintenance} width={280} />
-
-:::caution
-
-There can be up to three validators scheduling maintenance mode at a time. If you’re unable to schedule, check with the other validators when their maintenance mode ends.
-
-:::
