--- a/docs/validator/rewards.mdx
+++ b/docs/validator/rewards.mdx
@@ -20,16 +20,16 @@ Commission and bridge rewards are transferred to you automatically at the end of
 ## Claim staking rewards
 Staking rewards are calculated each period (roughly equal to one day) and displayed as “claimable rewards”. You need to claim these rewards manually.
 
-To claim, follow these steps:
-1. On the **My Staking** page, click **Claim all**.
+1. Go to the [staking dashboard](https://saigon-staking.roninchain.com/) and select **My Staking**.
+2. Click **Claim all**.
 
 <img src={claimStepOne} width={480} />
 
-2. Click **Claim now**.
+3. Click **Claim now**.
 
 <img src={claimStepTwo} width={416} />
 
-3. Confirm the transaction.
+4. Confirm the transaction.
 
 <img src={confirmTransaction} width={375} />
 
