--- a/docs/validator/commission-rate.mdx
+++ b/docs/validator/commission-rate.mdx
@@ -3,19 +3,23 @@ import changeCommissionStepTwo from './change-commission-step-2.png';
 import changeCommissionStepThree from './change-commission-step-3.png';
 
 # Change commission rate
-When registering to become a validator, you were asked to set a commission rate—the percentage of block rewards you receive before distributing the rest to your delegators.
+When registering to become a validator, you were asked to set a commission
+rate—the percentage of block rewards you receive before distributing
+the rest to your delegators.
 
-You can change the commission rate as many times as you like.
+You can change the commission rate at your discretion. 
+The minimum accepted range is 0% and the maximum rate is 20%.
 
-To change the commission rate, follow these steps:
 1. Go to **My Profile > Commission rate**.
 
 <img src={changeCommissionStepOne} width={280} />
 
-2. Enter the new commission rate and set the date when it takes effect. The date must be set at least seven days from the current date.
+2. Enter the new commission rate and set the date when it takes effect. 
+The date must be set at least seven days from the current date.
 
 <img src={changeCommissionStepTwo} width={416} />
 
-After you save the new rate, a clock icon is displayed next to your current rate to inform the community of the upcoming change.
+After you save the new rate, a clock icon is displayed next to your
+current rate to inform the users of the upcoming change.
 
 <img src={changeCommissionStepThree} width={324} />
