--- a/docs/validator/withdraw-stake.mdx
+++ b/docs/validator/withdraw-stake.mdx
@@ -6,20 +6,20 @@ import confirmTransaction from './confirm-transaction.png';
 You can withdraw part of your stake to your wallet as long as it’s been three days since you last staked in and provided that the minimum staking amount is maintained after withdrawal.
 
 :::caution
-Withdrawing a stake might lower your chance of being selected as a validator in the upcoming days, depending on how much others have staked.
+Withdrawing the stake might lower your chance of being selected as a validator in the upcoming days, depending on how much others have staked.
 :::
 
-To withdraw your stake, follow these steps:
-1. On the **My Staking** page, expand the options, and then click **Withdraw**.
+1. Go to the [staking dashboard](https://saigon-staking.roninchain.com/) and select **My Staking**.
+2. Expand the options and click **Withdraw**.
 
 <img src={withdrawStakeStepOne} width={480} />
 
-2. Enter the amount manually or click **Max** to automatically fill in the maximum withdrawable amount.
-3. Click **Withdraw**.
+3. Enter the amount manually or click **Max** to automatically fill in the maximum withdrawable amount.
+4. Click **Withdraw**.
 
 <img src={withdrawStakeStepTwo} width={416} />
 
-4. Confirm the transaction.
+5. Confirm the transaction.
 
 <img src={confirmTransaction} width={375} />
 
