sync changes that were published to main earlier, in the old structure

--- a/docs/validators/manage-profile/profile.mdx
+++ b/docs/validators/manage-profile/profile.mdx
@@ -1,5 +1,6 @@
 ---
-description: View your addresses and profile details 
+description: View your linked addresses and profile details
+title: View profile
 ---
 
 import profile from './assets/profile.png';
@@ -7,7 +8,7 @@ import governingAddresses from './assets/governing-addresses.png';
 
 # View your profile
 
-You can view the list of addresses linking to your validator account by going to your connected wallet and clicking **My profile**.
+You can view the list of addresses linked to your validator account by going to your connected wallet and clicking **My profile**.
 
 <img src={profile} width={280} />
 
