--- a/docs/validators/manage-profile/renounce.mdx
+++ b/docs/validators/manage-profile/renounce.mdx
@@ -1,12 +1,16 @@
 ---
 description: Renounce your role as a validator
+title: Renounce role
 ---
 
 import StepOne from './assets/renounce-step-1.png';
 import StepTwo from './assets/renounce-step-2.png';
 
 # Renounce your role
-You can request renunciation of your role as a validator. If you're a Standard Validator or Validator Candidate, follow this guide. If you’re a Governing Validator, contact the Sky Mavis team for renunciation.
+You can request renunciation of your role as a validator. 
+If you're a Standard Validator or Validator Candidate, 
+follow this guide. If you’re a Governing Validator, contact 
+the Sky Mavis team for renunciation.
 
 1. Go to **My Staking**, expand the options, and select **Renounce**.
 
@@ -21,5 +25,7 @@ You can request renunciation of your role as a validator. If you're a Standard V
 After submission, you will need to wait for seven days for renunciation to take effect. All the commission, bridge rewards, staking rewards and the remaining self-stake will be transferred to you automatically on the date of renunciation.
 
 :::caution
-Because your role remains active during the seven-day waiting period, you're advised to keep your node online and up to date with the network to avoid slashing.
+Because your role remains active during the seven-day waiting period,
+you're advised to keep your node online and up to date with the
+network to avoid slashing.
 :::
