--- a/docs/validators/manage-profile/activities.mdx
+++ b/docs/validators/manage-profile/activities.mdx
@@ -1,11 +1,14 @@
 ---
-description: View all your activity
+description: View your activity on Ronin
+title: View activity
 ---
 
 import activities from './assets/activities.png';
 
-# View your activities
+# View activities
 
-You can view all your staking activities, reward claims, and reward distributions, by going to **My Staking > Activities**.
+You can view all your staking activities,
+reward claims, and reward distributions,
+by going to the [staking dashboard](https://saigon-staking.roninchain.com/) **> My Staking > Activities**.
 
 <img src={activities} width={1280} />
