--- a/docs/validators/manage-profile/analytics.mdx
+++ b/docs/validators/manage-profile/analytics.mdx
@@ -1,17 +1,14 @@
 ---
-description: View your performance analytics
+description: View analytics on your performance as a validator
+title: View analytics
 ---
 
 import analytics from './assets/analytics.png';
 
 # View your analytics
 
-:::note
-
-This feature will be released soon.
-
-:::
-
-You can view analytics about the rewards you earned and blocks you produced over different periods of time, by going to **My Staking > Analytics**.
+You can view analytics about the rewards you earned and blocks you
+produced over different periods of time, by going to
+the [staking dashboard](https://saigon-staking.roninchain.com/) **> My Staking > Analytics**.
 
 <img src={analytics} width={1280} />
