--- a/docs/validators/onboarding/become-validator.mdx
+++ b/docs/validators/onboarding/become-validator.mdx
@@ -11,7 +11,7 @@ import stepFive from './assets/onboarding-step-5.png'
 
 # Become a validator
 
-This page explains how to become a validator on the Ronin network.
+This page explains how to register as a validator on Ronin.
 
 ## Validator roles
 
@@ -20,22 +20,33 @@ There are three validator roles:
 * **Standard Validator.** Every day, at least 10 Validator Candidates with the highest amount staked are selected as Standard Validators. The system records your total staking amount at 00:00 UTC every day for the selection process. 
 * **Governing Validator.** The validators chosen by the community and Sky Mavis to ensure network security. Governing Validators are validators by default, and they account for more than half of the total validator pool.
 
-## Steps
+## Register as a Validator Candidate
 
 1. Go to the [staking dashboard](https://saigon-staking.roninchain.com/) and click **Become a validator**. 
 <img src={becomeValidator} width={1280} />
 
-1. Familiarize yourself with the requirements and slashing penalties applied to validators. It's also highly recommended that you read the [white paper](./../../basics/white-paper.md).
+2. Familiarize yourself with the requirements and slashing penalties applied to validators. It's also highly recommended that you read the [white paper](./../../basics/white-paper.md).
 <img src={stepOne} width={1280} />
 
-1. Set up your validator and bridge operator nodes following [Run a validator node](./../../node-operators/validator-setup-t.md) and [Run a bridge operator node](./../../node-operators/bridge-setup-t.md), respectively.
+3. Set up your validator and bridge operator nodes following [Run a validator node](./../../node-operators/validator-setup-t.md) and [Run a bridge operator node](./../../node-operators/bridge-setup-t.md), respectively.
 <img src={stepTwo} width={1280} />
 
-1. Fill in your [addresses](./../manage-profile/profile.mdx) and specify your commission rate.
+4. Fill in your [addresses](./../manage-profile/profile.mdx) and specify your commission rate.
 <img src={stepThree} width={1280} />
 
-1. Provide the initial stake of RON.
+5. Provide the initial stake of RON.
 <img src={stepFour} width={1280} />
 
-Done! Now that you're a Validator Candidate, you're eligible for becoming a Standard Validator on the next day.
+Done!
+
 <img src={stepFive} width={1280} />
+
+:::caution
+
+Now that you're a Validator Candidate, we advise that you deposit some RON
+into the following addresses to avoid [bridge operator slashing](./../slashing/slashing.mdx)
+should you be selected as a validator:
+* Bridge operator address: RON is required to automatically sign transactions on the bridge every epoch.
+* Bridge voter address (if you’re a Governing Validator): RON is required to automatically sign transactions when syncing the set of bridge operators.
+
+:::
