--- a/docs/validators/slashing/bailout.mdx
+++ b/docs/validators/slashing/bailout.mdx
@@ -1,3 +1,7 @@
+---
+description: Use credit score to bail out of jail
+---
+
 import creditScore from './assets/credit-score.png';
 import stepOne from './assets/val-slash-tier-2.png';
 import stepTwo from './assets/confirm-bailout.png';
