sync changes that were published to main earlier, in the old structure

--- a/docs/validators/stake/withdraw.mdx
+++ b/docs/validators/stake/withdraw.mdx
@@ -16,7 +16,8 @@ as a validator in the upcoming days, depending on how much others
 have staked.
 :::
 
-1. Go to the [staking dashboard](https://saigon-staking.roninchain.com/) and select **My Staking**.
+1. Go to the [staking dashboard](https://saigon-staking.roninchain.com/)
+and select **My Staking**.
 2. Expand the options and click **Withdraw**.
 
 <img src={stepOne} width={480} />
@@ -32,4 +33,5 @@ fill in the maximum withdrawable amount.
 <img src={confirmTransaction} width={375} />
 
 After the transaction is confirmed, you can review its details on the
-**Activities** tab or check the status in [Ronin Block Explorer](https://saigon-explorer.roninchain.com/).
+**Activities** tab or check the status in
+[Ronin Block Explorer](https://saigon-explorer.roninchain.com/).
