--- a/docs/validators/manage-profile/maintenance.mdx
+++ b/docs/validators/manage-profile/maintenance.mdx
@@ -24,8 +24,8 @@ validators when their maintenance mode ends.
 <img src={stepOne} width={280} />
 
 2. Specify the duration of the maintenance period in epochs. 
-The valid duration is $3-144$ epochs ($\approx30$ minutes to $\approx24$ hours),
-where $1$ epoch equals $200$ blocks. You can choose from the valid
+The valid duration is 3-144 epochs ($\approx30$ minutes to $\approx24$ hours),
+where 1 epoch equals 200 blocks. You can choose from the valid
 start epoch, then decide on the end epoch.
 
 <img src={stepTwo} width={416} />
