--- a/docs/validators/slashing/slashing.mdx
+++ b/docs/validators/slashing/slashing.mdx
@@ -55,7 +55,7 @@ There are three tiers in this slash.
 
 #### Tier 1 validator slashing
 
-A validator misses their turn to produce blocks more than $50$ times in a day.
+A validator misses their turn to produce blocks more than 50 times in a day.
 
 The penalties are as follows:
 * The validator can't claim commission or staking rewards on that day.
@@ -65,11 +65,11 @@ The penalties are as follows:
 
 #### Tier 2 validator slashing
 
-A validator misses their turn to produce blocks more than $150$ times in a day.
+A validator misses their turn to produce blocks more than 150 times in a day.
 
 The penalties are as follows:
 * The validator is jailed for $\approx2$ days with the status set to **In jail**.
-* The validator gets slashed $10,000$ RON.
+* The validator gets slashed 10,000 RON.
 * The validator can't claim commission or staking rewards during jail time. 
 
 The validator can [bail out](bailout.mdx) of jail if they have sufficient credit score.
@@ -79,11 +79,11 @@ The validator can [bail out](bailout.mdx) of jail if they have sufficient credit
 #### Tier 3 validator slashing
 
 A validator bails out of Tier 2 but misses their turn to 
-produce blocks more than $50$ times on the same day.
+produce blocks more than 50 times on the same day.
 
 The penalties are as follows:
 * The validator is jailed for $\approx2$ days with the status set to **In jail**.
-* The validator gets slashed $10,000$ RON.
+* The validator gets slashed 10,000 RON.
 * The validator can't claim commission or staking rewards during jail time.
 
 At this tier, the validator can’t bail out.
@@ -97,7 +97,7 @@ number of votes. There are two tiers in this slash.
 
 #### Tier 1 operator slashing
 
-A bridge operator misses more than $10\%$ of votes in a day.
+A bridge operator misses more than 10% of votes in a day.
 
 The penalties are as follows:
 * The corresponding validator can't claim bridge rewards on that day.
@@ -107,7 +107,7 @@ The penalties are as follows:
 
 #### Tier 2 operator slashing
 
-A bridge operator misses more than $20\%$ of votes in a day.
+A bridge operator misses more than 20% of votes in a day.
 
 The penalties are as follows:
 * The corresponding validator can't claim any rewards (commission, staking rewards, bridge rewards) on that day.
@@ -123,13 +123,11 @@ The case when a Governing Validator doesn’t sync the set of bridge operators
 to the Ethereum chain for three consecutive days. 
 
 The penalties are as follows:
-* The validator is slashed $10,000$ RON.
+* The validator is slashed 10,000 RON.
 * The validator can't claim commission during this time.
 * The validator's status is set to **Punished**.
 
 <img src={relayingSlash} width={1224} />
-
-<p> </p>
 
 ### Multiple slashes
 
