sync changes that were published to main earlier, in the old structure (#67)
* Become a validator
* Schedule maintenance
* Change commission rate
* Bailout
* Minor changes throughout other pages

--- a/docs/validators/stake/increase.mdx
+++ b/docs/validators/stake/increase.mdx
@@ -9,16 +9,22 @@ import confirmTransaction from './assets/confirm-transaction.png';
 
 After becoming a validator, you can increase your self-staked amount of RON.
 
-1. On the **My Staking** page, click **Stake more**.
+1. Go to the [staking dashboard](https://saigon-staking.roninchain.com/)
+and select **My Staking**.
+2. Click **Stake more**.
 
 <img src={stepOne} width={480} />
 
-2. Enter the amount and click **Stake**. The estimated reward is calculated based on your estimated APR (annual percentage rate), so you can see how much RON will return from this stake.
+3. Enter the amount and click **Stake**. The estimated reward is calculated
+based on your estimated APR (annual percentage rate),
+so you can see how much RON will return from this stake.
 
 <img src={stepTwo} width={416} />
 
-3. Confirm the transaction.
+4. Confirm the transaction.
 
 <img src={confirmTransaction} width={375} />
 
-After the transaction is confirmed, you can review its details on the **Activities** tab or check the status in [Ronin Block Explorer](https://saigon-explorer.roninchain.com/).
+After the transaction is confirmed, you can review its details
+on the **Activities** tab or check the status in
+[Ronin Block Explorer](https://saigon-explorer.roninchain.com/).
