--- a/docs/basics/get-started.mdx
+++ b/docs/basics/get-started.mdx
@@ -1,5 +1,5 @@
 ---
-description: Get started with the Ronin wiki
+description: An overview of this documentation
 ---
 
 import DocCardList from '@theme/DocCardList'; 
@@ -8,10 +8,62 @@ import {findSidebarItem} from '@site/src/sidebarUtils';
 # Get started
 
 ### Learn about Ronin
+These guides provide general overview of Ronin and introduce basic tools
+to get you started.
 
 <DocCardList items={[ 
-    findSidebarItem('/docs/basics/introduction'),
-    findSidebarItem('/docs/basics/history'),
+    findSidebarItem('/docs/basics/key-concepts'),
+    findSidebarItem('/docs/category/basics'),
+    findSidebarItem('/docs/category/applications'),
+    findSidebarItem('/docs/category/roles'),
     ]} />
 
-### Join as a delegator
+### Stake and delegate
+Learn how to use your RON tokens, where to purchase RON, 
+how to delegate your stake and transfer it between validators.
+
+<DocCardList items={[ 
+    findSidebarItem('/docs/delegators/onboarding/purchase'),
+    findSidebarItem('/docs/delegators/onboarding/become-delegator'),
+    findSidebarItem('/docs/category/stake'),
+    findSidebarItem('/docs/delegators/rewards/claim'),
+    findSidebarItem('/docs/delegators/faq'),
+    ]} />
+
+### Run your own Ronin node
+If you want to run your own Ronin node, these guides explain how to set
+up and run a validator node, an archive node, or a node for your server to submit transactions
+and perform queries on the network.
+
+<DocCardList items={[ 
+    findSidebarItem('/docs/node-operators/cli'),
+    findSidebarItem('/docs/node-operators/minimum-requirements'),
+    findSidebarItem('/docs/category/mainnet'),
+    findSidebarItem('/docs/category/testnet'),
+    ]} />
+
+These guides describe how to register as a validator, stake tokens,
+claim rewards, and manage your validator profile.
+
+<DocCardList items={[ 
+    findSidebarItem('/docs/validators/onboarding/become-validator'),
+    findSidebarItem('/docs/category/applications'),
+    findSidebarItem('/docs/category/roles'),
+    ]} />
+
+### Build on Ronin
+If you're looking to build a decentralized application on Ronin, these guides are for you.
+
+<DocCardList items={[ 
+    findSidebarItem('/docs/category/smart-contracts'),
+    findSidebarItem('/docs/category/ronin-wallet'),
+    ]} />
+
+### Join the community
+Learn how to get in touch with the Ronin community and
+how to contribute to the network.
+
+<DocCardList items={[ 
+    findSidebarItem('/docs/community/join'),
+    findSidebarItem('/docs/category/contribution'),
+    ]} />
